samples/_failures_safe/1761166571_ce97d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f439d8e5.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_f439d8e5.c:157:5: error: expected declaration or statement at end of input
  157 |     token->column = *column;
      |     ^~~~~
